# Study

CPlus/: CMakeLists.txt  main.cpp
CPlus/array/: CintTest.cpp
CPlus/base/: Class1.cpp  Class1.h  Construction.cpp  Construction.h  Date.cpp  Date.h  FunPoint.cpp  FunPoint.h  MyTeacher.cpp  MyTeacher.h  Person.cpp  Person.h  Student.cpp  Student.h  Test.cpp  Test.h  newbase.cpp  newbase.h
CPlus/datastruct/: Solution.cpp  Solution.h
CPlus/datastruct/algotithm/: Algorithm.cpp  Algorithm.h  Student1.cpp  Student1.h
CPlus/datastruct/stack/: Stack.cpp  Stack.h
CPlus/datastruct/template/: Template.cpp  Template.h
CPlus/destruct/: ObjTest.cpp  ObjTest.h
CPlus/extendsPolymorphic/: Base.cpp  Base.h  Derived.cpp  Derived.h  Derived2.cpp  Derived2.h  Hero.cpp  Hero.h
CPlus/memory/: Main.cpp  Main.h
CPlus/ptr/: PtrTest.cpp  PtrTest.h  SmallSmartPtr.cpp  SmallSmartPtr.h
CPlus/templates/: TemplateTest.cpp  TemplateTest.h
CPlus/thread/: threadTest.cpp  threadTest.h
CStudy/: CMakeLists.txt  test1.c  test1.h
ComposeStudy/: build.gradle
ComposeStudy/app/: build.gradle
ComposeStudy/app/src/main/: AndroidManifest.xml
ComposeStudy/app/src/main/res/values/: colors.xml  strings.xml
ComposeStudy/gradle/wrapper/: gradle-wrapper.properties
GradleStudy/: README.md  build.gradle  common.gradle  gradle.properties  lifecycle.gradle  projects.gradle  settings.gradle
GradleStudy/app/: build.gradle
GradleStudy/app/src/main/: AndroidManifest.xml
GradleStudy/app/src/main/res/layout/: activity_main.xml
GradleStudy/app/src/main/res/values/: strings.xml  themes.xml
GradleStudy/app/src/main/res/values-night/: themes.xml
GradleStudy/buildSrc/: build.gradle
GradleStudy/gradle/wrapper/: gradle-wrapper.properties
GradleStudy/module_java_plugin/: build.gradle
GradleStudy/module_kt_plugin/: build.gradle
GradleStudy/module_plugin/: build.gradle
GradleStudy/module_plugin/gradle/wrapper/: gradle-wrapper.properties
GradleStudy/repo/com/xzq/plugin/java-plugin/: maven-metadata.xml  maven-metadata.xml.md5  (+1 more)
Java/: build.gradle  settings.gradle
Java/gradle/wrapper/: gradle-wrapper.properties
Java/src/main/java/mypkg/: JNITest.java  Log1.java  LogUtil.kt  LogUtil2.kt
JavaMaven/: README.md  pom.xml
JavaStudy/src/com/xzq/: JavaMain.java  Test.java
JavaStudy/src/com/xzq/asm/: ClassFileAnalysiser.java
JavaStudy/src/com/xzq/cache/: CacheTest.java
JavaStudy/src/com/xzq/collections/: LinkedListTest.java
JavaStudy/src/com/xzq/jvm/: GCCheck.java  GcWatcher.java  Main.java  ReferenceTest.java
JavaStudy/src/com/xzq/kotlin/: JavaPerson.java  KotlinTest.kt  Lock.kt  Mian.kt
JavaStudy/src/com/xzq/sealed/: Result.java
JavaStudy/src/com/xzq/sort/: DistanceBean.java  Main.java
JavaStudy/src/com/xzq/thread/: ThreadMain.java
JavaStudy/src/com/xzq/xzq/: JavaTest.java  TimeTools.java  TimeUtils.java
KotlinStudy/: build.gradle.kts  settings.gradle.kts
KotlinStudy/gradle/wrapper/: gradle-wrapper.properties
(+499 files in other folders)
